# controllers/contacts.js
@@ -2,18 +2,20 @@ const mongodb = require('../data/database');
 const objectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-    // #swagger.tags = ['Contacts']
-    const results = await mongodb.getDb().db().collection('contacts').find({});
+    const results = await mongodb
+        .getDb().collection('contacts')
+        .find({});
+
     results.toArray().then((contacts) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(contacts);
-    } );
-}
+    });
+};
 
 const getSingle = async (req, res) => {
     // #swagger.tags = ['Contacts']
     const contactId = req.params.id;
-    const results = await mongodb.getDb().db().collection('contacts').find({ _id: new objectId(contactId) });
+    const results = await mongodb.getDb().collection('contacts').find({ _id: new objectId(contactId) });
     results.toArray().then((contacts) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(contacts[0]);
@@ -22,15 +24,21 @@ const getSingle = async (req, res) => {
 
 const createContact = async (req, res) => {
     // #swagger.tags = ['Contacts']
+
     const contact = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
         favoriteColor: req.body.favoriteColor,
         birthday: req.body.birthday
-    }
-    const response = await mongodb.getDb().db().collection('contacts').insertOne(contact);
-    if (response.modifiedCount > 0) {
+    };
+
+    const response = await mongodb
+        .getDb()
+        .collection('contacts')
+        .insertOne(contact);
+
+    if (response.acknowledged) {
         res.status(201).json(response);
     } else {
         res.status(500).json({ error: 'Failed to create contact' });
@@ -46,8 +54,8 @@ const updateContact = async (req, res) => {
         email: req.body.email,
         favoriteColor: req.body.favoriteColor,
         birthday: req.body.birthday
-    }
-    const response = await mongodb.getDb().db().collection('contacts').replaceOne({ _id: new objectId(contactId) }, updatedContact);
+    };
+    const response = await mongodb.getDb().collection('contacts').replaceOne({ _id: new objectId(contactId) }, updatedContact);
     if (response.acknowledged) {
         res.status(200).json(response);
     } else {
@@ -58,7 +66,7 @@ const updateContact = async (req, res) => {
 const deleteContact = async (req, res) => {
     // #swagger.tags = ['Contacts']
     const contactId = req.params.id;
-    const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: new objectId(contactId) });
+    const response = await mongodb.getDb().collection('contacts').deleteOne({ _id: new objectId(contactId) });
     if (response.deletedCount > 0) {
         res.status(200).json(response);
     } else {
